<resources>
    <string name="app_name">BrewMapp</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    //drawer items
    <string name="nav_item_feed">Лента новостей</string>
    <string name="nav_item_friends">Друзья</string>
    <string name="nav_item_message">Сообщения</string>
    <string name="nav_item_search">Поиск</string>
    <string name="nav_item_map">Карта</string>
    <string name="nav_item_settings">Настройки</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="font_main">main.otf</string>
    <string name="choose_title_welcome">Добро пожаловать!</string>
    <string name="api_version">api-version: 1.04</string>
    <string name="url">https://developer.brewmapp.com/</string>

    <string name="test">Test</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key">AIzaSyBfZon3i0vhf2o3qmJxpY-igNonTYALyFk</string>
</resources>
