<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_feed"
            android:icon="@drawable/ic_menu_feeds"
            android:title="@string/nav_item_feed" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_menu_friends"
            android:title="@string/nav_item_friends" />
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_menu_messages"
            android:title="@string/nav_item_message" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_search"
            android:title="@string/nav_item_search" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/nav_item_map" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/nav_item_settings" />
    </group>
</menu>